# sprokit

./: CMakeLists.txt  applypatch-msg  commit-msg  post-applypatch  post-checkout  post-commit  post-merge  post-receive  post-rewrite  post-update  pre-applypatch  pre-auto-gc  pre-commit  pre-rebase  pre-receive  prepare-commit-msg  run-hooks  update
applypatch-msg.d/: 00-commit-msg-chain.sh
cmake/snippets/: configuration.cmake  flags-gnu.cmake  flags.cmake
cmake/support/: test.cmake
commit-msg.d/: 00-duplicate-signed-off-by.sh  10-whitespace.sh  20-first-line-subject.sh  25-empty-second-line.sh  30-duplicate-signed-off-by.sh
conf/: CMakeLists.txt  dashboard.ctest.in  sprokit-macro-configure.cmake  sprokit-macro-targets.cmake  sprokit-macro-tests.cmake
pre-applypatch.d/: 00-pre-commit-chain.sh
pre-commit.d/: 00-against.sh  05-ascii-filenames.sh  10-whitespace.sh  30-copyright.sh
pre-rebase.d/: 00-topic-rebase-policy.sh
prepare-commit-msg.d/: 10-reject-pull-merge.sh
src/bindings/python/sprokit/pipeline/: datum.cxx  edge.cxx
src/sprokit/pipeline/: CMakeLists.txt  datum.cxx  datum.h  edge.cxx  edge.h
tests/: CMakeLists.txt
tests/bindings/python/sprokit/pipeline/: test-datum.py  test-edge.py
tests/data/pipelines/: config_provider_sys.pipe  config_provider_sys_unrecognized.pipe
tests/sprokit/pipeline/: CMakeLists.txt  test_edge.cxx
tests/sprokit/pipeline_util/: test_pipe_bakery.cxx
